# classic-graph-alg

./: .gitignore  CMakeLists.txt
graph/: CMakeLists.txt  graph-alg.cpp  graph-alg.h  graph-presented.cpp  graph-presented.h  graph.h
lib/graph-alg/: graph-alg.h
src/: graph-alg.cpp  graph-alg.h  graph.h
test/: CMakeLists.txt
test/src/: graph-provider.h  graph-tests.cpp  graph-tests.h
